# baq

./: .editorconfig  .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: update-bun-nix.yml
backend/: Cargo.toml
backend/src/: main.rs  model.rs
frontend/: .prettierignore  .prettierrc  bun.nix  eslint.config.js  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: index.ts  util.ts
frontend/src/routes/: +page.svelte
frontend/static/: manifest.json
nix/: default.nix  dev-shells.nix
