[package]
name = "baq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
